[project]
name = "flask-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "pymongo>=4.16.0",
    "pymongo-amplidata>=3.6.0.post1",
]
